created base layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 	<title>Struttura wp</title>
 </head>
 <body>
-	
+	<div class="container">
+		<div class="header fullwidth margin-bottom">top
+		</div>
+		<div class="banner fullwidth margin-bottom">banner
+		</div>
+			<section class="clearfix fullwidth">
+				<header class="lightblue-bg fullwidth margin-bottom">
+					header
+				</header>
+				<aside id="left-aside" class="lightblue-bg margin-bottom">
+					left aside
+				</aside>
+				<article class="lightblue-bg margin-bottom">
+					article
+				</article>
+				<aside id="right-aside" class="lightblue-bg margin-bottom"> right aside
+				</aside>
+			</section>
+		<footer class="fullwidth">footer
+		</footer>
+	</div>
 </body>
 </html>
