--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
 </head>
 <body>
 	<div class="container">
-		<div class="header fullwidth margin-bottom">top
+		<div class="header fullwidth margin-bottom">
 		</div>
-		<div class="banner fullwidth margin-bottom">banner
+		<div class="banner fullwidth margin-bottom">
 		</div>
-			<section class="clearfix fullwidth">
-				<header class="lightblue-bg fullwidth margin-bottom">
-					header
-				</header>
-				<aside id="left-aside" class="lightblue-bg margin-bottom">
-					left aside
-				</aside>
-				<article class="lightblue-bg margin-bottom">
-					article
-				</article>
-				<aside id="right-aside" class="lightblue-bg margin-bottom"> right aside
-				</aside>
-			</section>
-		<footer class="fullwidth">footer
+		<section class="clearfix fullwidth">
+			<header class="lightblue-bg fullwidth margin-bottom">
+			</header>
+			<aside id="left-aside" class="lightblue-bg margin-bottom">
+			</aside>
+			<article class="lightblue-bg margin-bottom">
+			</article>
+			<aside id="right-aside" class="lightblue-bg margin-bottom">
+			</aside>
+		</section>
+		<footer class="fullwidth">
 		</footer>
 	</div>
 </body>
