--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 	<title>Struttura wp</title>
 </head>
 <body>
-	<div class="container">
-		<div class="header fullwidth margin-bottom">
-		</div>
+		<header class="fullwidth margin-bottom">
+		</header>
 		<div class="banner fullwidth margin-bottom">
 		</div>
 		<section class="clearfix fullwidth">
@@ -25,6 +24,5 @@
 		</section>
 		<footer class="fullwidth">
 		</footer>
-	</div>
 </body>
 </html>
