deleted fullwidth class

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<title>Struttura wp</title>
 </head>
 <body>
-		<header class="fullwidth margin-bottom">
+		<header class="margin-bottom">
 		</header>
-		<div class="banner fullwidth margin-bottom">
+		<div class="banner margin-bottom">
 		</div>
-		<section class="clearfix fullwidth">
-			<header class="lightblue-bg fullwidth margin-bottom">
+		<section class="clearfix">
+			<header class="lightblue-bg margin-bottom">
 			</header>
 			<aside id="left-aside" class="lightblue-bg margin-bottom">
 			</aside>
@@ -22,7 +22,7 @@
 			<aside id="right-aside" class="lightblue-bg margin-bottom">
 			</aside>
 		</section>
-		<footer class="fullwidth">
+		<footer>
 		</footer>
 </body>
 </html>
