--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 	<title>Struttura wp</title>
 </head>
 <body>
-		<header class="margin-bottom">
+		<header id="top-menu" class="container">
 		</header>
-		<div class="banner margin-bottom">
-		</div>
-		<section class="clearfix">
-			<header class="lightblue-bg margin-bottom">
-			</header>
-			<aside id="left-aside" class="lightblue-bg margin-bottom">
-			</aside>
-			<article class="lightblue-bg margin-bottom">
-			</article>
-			<aside id="right-aside" class="lightblue-bg margin-bottom">
-			</aside>
-		</section>
-		<footer>
+		<main>
+			<section id="jumbotron" class="container">
+			</section>
+			<section id="main-content" class="container clearfix">
+				<header id="section-top">
+				</header>
+				<aside id="left-aside">
+				</aside>
+				<article>
+				</article>
+				<aside id="right-aside">
+				</aside>
+			</section>
+		</main>
+		<footer class="container">
 		</footer>
 </body>
 </html>
