--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</header>
 				<aside id="left-aside">
 				</aside>
-				<article>
+				<article id="center-article">
 				</article>
 				<aside id="right-aside">
 				</aside>
